# fast_zero_learning

./: guia_terminal.md  meu_ip.py  pyproject.toml
fast_zero/: app.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 7d4f36cf71c9_create_users_table.py
tests/: test_app.py  test_db.py
